--- a/roles/proxmox-create-vm/templates/kickstart.ks.j2
+++ b/roles/proxmox-create-vm/templates/kickstart.ks.j2
@@ -19,7 +19,7 @@ keyboard --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --hostname=localhost.localdomain
+network  --hostname={{ guest_host }}
 
 # Use network installation
 url --url="https://download.rockylinux.org/pub/rocky/8.7/BaseOS/x86_64/os/"
@@ -64,5 +64,5 @@ chown 1000:1000 -R home/{{ ansible_user }}/.ssh
 restorecon -R /home/{{ ansible_user }}/.ssh
 
 %end
-reboot
+shutdown
 
