--- a/roles/proxmox-create-vm/templates/mac-address-template.ipxe.j2
+++ b/roles/proxmox-create-vm/templates/mac-address-template.ipxe.j2
@@ -1,3 +1,3 @@
 #!ipxe
 
-chain http://ihs-ipxe-01.monkeyboy107.com/labnet/{{ mac }}.ipxe
+chain http://ihs-ipxe-01.monkeyboy107.com/labnet/{{ mac_address }}.ipxe
