Fixed the templating issues and mac address retrevial issues

--- a/roles/proxmox-create-vm/templates/mac-address-template.ipxe.j2
+++ b/roles/proxmox-create-vm/templates/mac-address-template.ipxe.j2
@@ -1,3 +1,17 @@
 #!ipxe
 
 chain http://ihs-ipxe-01.monkeyboy107.com/labnet/{{ mac_address }}.ipxe
+
+#!ipxe
+# set base http://repo.uccs.edu/rocky-linuix/8.7/BaseOS/x86_64/os
+# set base https://download.rockylinux.org/pub/rocky/8.7/BaseOS/x86_64/os
+set base http://ihs-ipxe-01.monkeyboy107.com/rocky/8
+set init_repo https://download.rockylinux.org/pub/rocky/8.7/BaseOS/x86_64/kickstart
+set ipxe_host http://ihs-ipxe-01
+
+# set init_repo ${base}
+kernel ${base}/images/pxeboot/vmlinuz initrd=initrd.img inst.repo=${init_repo} inst.ks=http://ihs-ipxe-01.monkeyboy107.com/rocky/8/ks/{{ mac_address }}.ks  || 
+# kernel ${base}/images/pxeboot/vmlinuz initrd=initrd.img inst.repo=${init_repo}  || 
+initrd ${base}/images/pxeboot/initrd.img  || 
+boot
+
