--- a/roles/proxmox-create-vm/templates/kickstart.ks.j2
+++ b/roles/proxmox-create-vm/templates/kickstart.ks.j2
@@ -19,7 +19,7 @@ keyboard --xlayouts='us'
 lang en_US.UTF-8
 
 # Network information
-network  --hostname={{ guest_host }}
+network  --hostname={{ all_VMIDs_dict[guest_vmid] }}
 
 # Use network installation
 url --url="https://download.rockylinux.org/pub/rocky/8.7/BaseOS/x86_64/os/"
