Fixing all the problems

--- a/roles/bareos/templates/bareos-fd.conf.j2
+++ b/roles/bareos/templates/bareos-fd.conf.j2
@@ -1,6 +1,6 @@
 Director {
-  Name = {{ inventory_hostname }}
+  Name = {{ inventory_hostname_short }}-fd
 {{ password }}
-  Description = "This has been added via ansible for the host {{ host }}"
+  Description = "This has been added via ansible for the host {{ inventory_hostname_short }}"
 }
 
