--- a/roles/bareos/templates/bareos-fd.conf.j2
+++ b/roles/bareos/templates/bareos-fd.conf.j2
@@ -1,6 +1,7 @@
 Director {
   Name = {{ inventory_hostname_short }}-fd
 {{ password }}
+  Address = {{ inventory_hostname }}
   Description = "This has been added via ansible for the host {{ inventory_hostname_short }}"
 }
 
